Fixed about me layout issues.

--- a/styles.css
+++ b/styles.css
@@ -203,12 +203,6 @@ button {
 
 /*The nav hover effect*/
 
-/*For mobile devices*/
-@media (max-width:650px){
-
-}
-
-
 .topnav {
   overflow: hidden;
   background-color: #9a9591;
@@ -297,7 +291,7 @@ button {
   grid-template-areas: "." ".";
   padding-bottom: 75px;
   width: 90%;
-  height: 80%;
+  max-height: 80%;
   margin: 150px 5% 100px;
   opacity: 80%;
   border-radius: 20px;
@@ -396,6 +390,34 @@ button {
 
 /*used to position the logout button in the upper right corner of the page*/
 
+
+/*THE ABOUT ME GRID*/
+.about-me-grid-container {
+  display: grid;
+  grid-template-columns: auto auto;
+  grid-template-rows:auto auto auto;
+  gap: 0px 0px;
+  grid-template-areas:
+    "title title"
+    "text text"
+    "more-info more-info";
+  background-color: white;
+  opacity: 80%;
+}
+
+.title {
+  grid-area: title;
+  text-align: center;
+  margin-top: 10px;
+}
+.text {
+  grid-area: text;
+  text-align: left
+}
+.more-info {
+  grid-area: more-info;
+  text-align: center;
+}
 
 /*THE EDUCATION GRID*/
 .education-grid-container {
